--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -89,7 +89,7 @@
             href="https://github.com/github/feedback/discussions/4992">https://github.com/github/feedback/discussions/4992</a>.
         Let us hope that GitHub can find a solution to unblock GitHub Wiki content in harmony with their SEO concerns,
         and GHWSEE can be <a href="#decommissioning">decommissioned</a>. Already, Wikis that are known to be directly
-        indexable are directly indexable are skipped by GHWSEE as part of the partial decommissioning. </p>
+        indexable are skipped by GHWSEE as part of the partial decommissioning. </p>
     <p> For anti-abuse reasons, all links rendered in the service that are going out of GitHub are tagged with
         <code>rel="nofollow <a href="https://developers.google.com/search/blog/2019/09/evolving-nofollow-new-ways-to-identify">ugc</a>"</code>
         as to not affect search engine rankings or to promote mass vandalism of GitHub Wikis. This is in addition to
