clarify that these don't have "Editing Restricted to Repository Collaborators"

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -49,9 +49,10 @@
         <li>
             <a
                 href="https://docs.google.com/spreadsheets/d/17yHqnm_cGDrOTCH2TPnpCU9qaxESuF0q0zuoORl76g4/edit#gid=1481444161">About
-                4,700</a> repositories have 798 stars and above and can't be directly indexed by search engines. You
-            would likely recognize some of these repositories. Many of these projects have large amounts of content in
-            their Wikis.
+                4,700</a> repositories have 798 stars and above and can't be directly indexed by search engines. These
+            repositories do not appear to have the "Editing Restricted to Repository Collaborators" option turned on.
+            You would likely recognize some of these repositories. Many of these projects have large amounts of content
+            in their Wikis.
         </li>
         <li> There are still about 420,000+ GitHub.com Wikis that are below 798 stars and/or publically editable. These
             are not indexed by search engines. </li>
