--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -55,7 +55,7 @@
             in their Wikis.
         </li>
         <li> There are still about 420,000+ GitHub.com Wikis that are below 798 stars and/or publically editable. These
-            are not indexed by search engines. </li>
+            can't be directly indexed by search engines as well. </li>
         <li>GHWSEE is helping GitHub Wikis that aren't indexable be indexable in search engines and is in the process of
             partially decommissioning itself for GitHub Wikis that are directly indexable.</li>
     </ul>
