--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -127,6 +127,8 @@
         </li>
         <li><a href="/m/naver/billboard.js/wiki">naver/billboard.js</a>
         </li>
+        <li><a href="/m/wlsdn2316/1-tetris-/wiki">wlsdn2316/1-tetris-</a>
+        </li>
     </ul>
     <h2>Project, README, Source, Issues, and other information</h2>
     <a href="https://github.com/nelsonjchen/github-wiki-see-rs">https://github.com/nelsonjchen/github-wiki-see-rs</a>
