Define and hold an API for power users to automatically redirect themselves when landing on GHWSEE
Closes Make a defined stable "API" for extensions/scripts/etc. to click to go to the original page  #138

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -101,6 +101,11 @@
             service and to get a link to the original GitHub content. Do not read the content on this site as it may
             have rendered with errors and is only meant for robots. Go directly to the original page on GitHub with the
             link or button.</li>
+        <ul>
+            <li> Scripters/Extension Authors/Power Users: If you would like to automatically redirect to the GitHub Wiki
+                page on GitHub.com when landing on a GHWSEE page, please see this document for an API and/or examples:
+                <a href="https://github.com/nelsonjchen/github-wiki-see-rs/blob/master/AUTO_REDIRECT_API.md">https://github.com/nelsonjchen/github-wiki-see-rs/blob/master/AUTO_REDIRECT_API.md</a></li>
+        </ul>
         <li>Wiki Editor: If you are a GitHub Wiki contributor, simply edit your content periodically and the <a
                 href=https://github.com/nelsonjchen/github-wiki-see-rs-sitemaps>sitemap generator</a> will eventually
             pick it up and notify search engines. Because this just isn't GitHub.com, don't expect a high ranking as
