observation and time

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -40,7 +40,8 @@
             searched on search engines such as Google or DuckDuckGo.
         </li>
         <li> GitHub is currently permitting a select criteria of GitHub Wikis to be indexed. They have not publically
-            released their testing criteria. </li>
+            released their testing criteria. This appears to have started around Q4 2021 and the observed criteria has
+            been observed to be changing periodically.</li>
         <li> The current observed criteria to permit indexing appears to be "Editing Restricted to Repository
             Collaborators" and repository has 798 stars and above. <a
                 href="https://docs.google.com/spreadsheets/d/1y5V1xVtL-Z4w4yt9mVQuwGCP3s8TgNAS756IKStRUqs/edit?usp=sharing">
@@ -104,7 +105,9 @@
         <ul>
             <li> Scripters/Extension Authors/Power Users: If you would like to automatically redirect to the GitHub Wiki
                 page on GitHub.com when landing on a GHWSEE page, please see this document for an API and/or examples:
-                <a href="https://github.com/nelsonjchen/github-wiki-see-rs/blob/master/AUTO_REDIRECT_API.md">https://github.com/nelsonjchen/github-wiki-see-rs/blob/master/AUTO_REDIRECT_API.md</a></li>
+                <a
+                    href="https://github.com/nelsonjchen/github-wiki-see-rs/blob/master/AUTO_REDIRECT_API.md">https://github.com/nelsonjchen/github-wiki-see-rs/blob/master/AUTO_REDIRECT_API.md</a>
+            </li>
         </ul>
         <li>Wiki Editor: If you are a GitHub Wiki contributor, simply edit your content periodically and the <a
                 href=https://github.com/nelsonjchen/github-wiki-see-rs-sitemaps>sitemap generator</a> will eventually
