--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -113,8 +113,9 @@
                 href=https://github.com/nelsonjchen/github-wiki-see-rs-sitemaps>sitemap generator</a> will eventually
             pick it up and notify search engines. Because this just isn't GitHub.com, don't expect a high ranking as
             your content will probably be on page 2, 3, or worse. That is still much better than the previous
-            alternative of not being in the search results at all! Note that it may take quite some time for content to
-            be picked up and there is no guarantee it will be picked up.</li>
+            alternative of not being in the search results at all! Note that it may take quite some time and luck for
+            content to be picked up or detected by search engine crawlers and there is no guarantee it will be picked up
+            or detected.</li>
         <ul>
             <li>If you would like to greatly increase the chances and ranking of your GitHub Wiki content being indexed,
                 consider adding a link to your content on GHWSEE to a location where search engines can index. For an
