--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -142,7 +142,7 @@
     <h2>Project, README, Source, Issues, and other information</h2>
     <a href="https://github.com/nelsonjchen/github-wiki-see-rs">https://github.com/nelsonjchen/github-wiki-see-rs</a>
     <p> So far, about $300 have been spent on experiments, queries, and so on with this service during its initial
-        ramp-up. The good news is that the cost to currently host the service is very low. In leiu of any compensation,
+        ramp-up. The good news is that the cost to currently host the service is very low. In lieu of any compensation,
         please consider donating money recurringly or one-time to the <a href="https://archive.org">Internet Archive</a>
         and/or your time to <a href="https://archiveteam.org">Archive Team</a> projects. </p>
     <h2 id="decommissioning">Decommissioning</h2>
