--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -57,10 +57,10 @@
         </li>
         <li> There are still about 420,000+ GitHub.com Wikis that are below 798 stars and/or publically editable. These
             can't be directly indexed by search engines as well. </li>
-        <li> NOTE: The above observed criteria may not be currently accurate either: <a
+        <li> <strong>NOTE</strong>: The above observed criteria may not be currently accurate either: <a
                 href="https://github.com/microsoft/diskspd/wiki">https://github.com/microsoft/diskspd/wiki</a> is
-            non-editable, above the star count, but is non-indexable as well. An exact criteria is currently unknown.
-        </li>
+            non-editable, above the star count, but is non-indexable as well. To reiterate, the current criteria is
+            currently unknown. </li>
         <li>GHWSEE is helping GitHub Wikis that aren't indexable be indexable in search engines and is in the process of
             partially decommissioning itself for GitHub Wikis that are directly indexable.</li>
     </ul>
