--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -42,7 +42,7 @@
         <li> GitHub is currently permitting a select criteria of GitHub Wikis to be indexed. They have not publically
             released their testing criteria. This appears to have started around Q4 2021 and the observed criteria has
             been observed to be changing periodically.</li>
-        <li> The current observed criteria to permit indexing appears to be "Editing Restricted to Repository
+        <li> The most recent observed criteria to permit indexing appears to be "Editing Restricted to Repository
             Collaborators" and repository has 798 stars and above. <a
                 href="https://docs.google.com/spreadsheets/d/1y5V1xVtL-Z4w4yt9mVQuwGCP3s8TgNAS756IKStRUqs/edit?usp=sharing">
                 About 3,300</a> GitHub.com Wikis meet this criteria and can be found on search engines such as Google /
@@ -57,7 +57,7 @@
         </li>
         <li> There are still about 420,000+ GitHub.com Wikis that are below 798 stars and/or publically editable. These
             can't be directly indexed by search engines as well. </li>
-        <li> <strong>NOTE</strong>: The above observed criteria may not be currently accurate either: <a
+        <li> <strong>NOTE</strong>: The above most recently observed criteria may not be currently accurate either: <a
                 href="https://github.com/microsoft/diskspd/wiki">https://github.com/microsoft/diskspd/wiki</a> is
             non-editable, above the star count, but is non-indexable as well. To reiterate, the current criteria is
             currently unknown. </li>
