--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -126,8 +126,10 @@
                 example of this in action, see how the <a
                     href="https://github.com/MiSTer-devel/Main_MiSTer#main_mister-main-binary-and-wiki-repo">MiSTer
                     historical computing and gaming recreation project linked a "crawlable wiki" that GHWSEE serves in
-                    their README on GitHub which can be indexed</a>. Popular repositories can confer their own ranking
-                power onto their proxied and indexable Wiki content on GHWSEE.</li>
+                    their README on GitHub which can be indexed</a>. While the link is "nofollow" on the README as
+                displayed on GitHub, that attribute is more of a guideline than a hard rule nowadays for search engines
+                anyway. Popular repositories can confer their own ranking power onto their proxied and indexable Wiki
+                content on GHWSEE.</li>
         </ul>
     </ul>
     <h2>Examples</h2>
