Mention LibGDX example

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -90,6 +90,14 @@
             contributions</a>. This is the official solution which can be burdensome and you are welcome to continue <a
             href="#usage">using</a> GHWSEE.</a>
     </p>
+    <ul>
+        <li> A great example of an organization taking the moving to GitHub Pages route would be the <a
+                href="https://libgdx.com/">LibGDX</a> cross-platform Java game development framework project. The
+            project has migrated their Wiki to their website. The pages are very faithful to the original GitHub <a
+                href="https://libgdx.com/wiki/">Wiki page design</a> including the aforementioned "Edit on GitHub" link.
+            You can see the Jekyll/GitHub Pages implementation backing this in their <a
+                href="https://github.com/libgdx/libgdx.github.io"> repository</a>.</li>
+    </ul>
     <p> If you are interested in providing feedback to GitHub or seeing what GitHub staff has said about their blocking
         of Wiki content from appearing in search engines, participate in the discussion here: <a
             href="https://github.com/github/feedback/discussions/4992">https://github.com/github/feedback/discussions/4992</a>.
