--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -97,6 +97,8 @@
                 href="https://libgdx.com/wiki/">Wiki page design</a> including the aforementioned "Edit on GitHub" link.
             You can see the Jekyll/GitHub Pages implementation backing this in their <a
                 href="https://github.com/libgdx/libgdx.github.io"> repository</a>.</li>
+        <li>If you or your organization does this, please reach out to me to try to expedite search engines to remove
+            GHWSEE's entries from search engine results for the migrated wiki.</li>
     </ul>
     <p> If you are interested in providing feedback to GitHub or seeing what GitHub staff has said about their blocking
         of Wiki content from appearing in search engines, participate in the discussion here: <a
