--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -92,7 +92,7 @@
     </p>
     <ul>
         <li> A great example of an organization taking the moving to GitHub Pages route would be the <a
-                href="https://libgdx.com/">LibGDX</a> cross-platform Java game development framework project. The
+                href="https://libgdx.com/">libGDX</a> cross-platform Java game development framework project. The
             project has migrated their Wiki to their website. The pages are very faithful to the original GitHub <a
                 href="https://libgdx.com/wiki/">Wiki page design</a> including the aforementioned "Edit on GitHub" link.
             You can see the Jekyll/GitHub Pages implementation backing this in their <a
