--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -96,7 +96,9 @@
             project has migrated their Wiki to their website. The pages are very faithful to the original GitHub <a
                 href="https://libgdx.com/wiki/">Wiki page design</a> including the aforementioned "Edit on GitHub" link.
             You can see the Jekyll/GitHub Pages implementation backing this in their <a
-                href="https://github.com/libgdx/libgdx.github.io"> repository</a>.</li>
+                href="https://github.com/libgdx/libgdx.github.io"> repository</a>. There is also a <a
+                href="https://github.com/libgdx/libgdx.github.io/pull/65">pull request</a> on that repository that can
+            be used as a reference as well.</li>
         <li>If you or your organization does this, please reach out to me to try to expedite search engines to remove
             GHWSEE's entries from search engine results for the migrated wiki.</li>
     </ul>
