mention this only apply to high star count repos

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -100,8 +100,9 @@
                 href="https://github.com/libgdx/libgdx.github.io/pull/65">pull request</a> on that repository that can
             be used as a reference as well.</li>
         <li>It is also possible to target the GitHub Wiki itself as well from the GitHub repository and deploy to it
-            with GitHub Actions. An example of this can be seen on the <a
-                href="https://github.com/golang/vscode-go/issues/2094">Go for VSCode repository.</a> </li>
+            with GitHub Actions. Wikis on repositories with high star counts (1000+) can take advantage of this. An
+            example of this can be seen on the <a href="https://github.com/golang/vscode-go/issues/2094">Go for VSCode
+                repository.</a> </li>
         <li>If you or your organization does this, please reach out to me to try to expedite search engines to remove
             GHWSEE's entries from search engine results for the migrated wiki.</li>
     </ul>
