cheap crappy borders for tables

--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -202,6 +202,12 @@
             font-family: "color-emoji";
         }
 
+        table,
+        th,
+        td {
+            border: 1px solid black;
+        }
+
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Not used, did not want to risk non-indexing. -->
