--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -36,12 +36,16 @@
     <ul>
         <li>
             <a href=https://github.com/github/feedback/discussions/4992>GitHub prevents crawling of repository wiki
-                content.</a> This greatly reduces the effectiveness of content of pages on these Wikis if they cannot be
+                content</a> through <a
+                href="https://github.com/github/feedback/discussions/4992#discussioncomment-1448177">HTTP headers</a>.
+            The blocking greatly reduces the effectiveness of content of pages on affected Wikis if they cannot be
             searched on search engines such as Google or DuckDuckGo.
         </li>
-        <li> GitHub is currently permitting a select criteria of GitHub Wikis to be indexed. They have not publically
-            released their testing criteria. This appears to have started around Q4 2021 and the observed criteria has
-            been observed to be changing periodically.</li>
+        <li> GitHub is currently permitting a select criteria of GitHub Wikis to be indexed by not including the
+            blocking header. They have not released their testing criteria. This appears to have started around Q4 2021
+            with the groundwork having being laid by transistioning from blanket site-wide robots.txt blocking to
+            selective HTTP Header-based unblocking. The observed criteria had been observed to be changing periodically
+            but may have stablized since. </li>
         <li> The most recent observed criteria to permit indexing appears to be "Editing Restricted to Repository
             Collaborators" and repository has 798 stars and above. <a
                 href="https://docs.google.com/spreadsheets/d/1y5V1xVtL-Z4w4yt9mVQuwGCP3s8TgNAS756IKStRUqs/edit?usp=sharing">
@@ -52,8 +56,8 @@
                 href="https://docs.google.com/spreadsheets/d/17yHqnm_cGDrOTCH2TPnpCU9qaxESuF0q0zuoORl76g4/edit#gid=1481444161">About
                 4,700</a> repositories have 798 stars and above and can't be directly indexed by search engines. These
             repositories do not appear to have the "Editing Restricted to Repository Collaborators" option turned on.
-            You would likely recognize some of these repositories. Many of these projects have large amounts of content
-            in their Wikis.
+            You would likely recognize some of these repositories no matter where your expertise may lie. Many of these
+            projects have large amounts of content in their Wikis and are very active.
         </li>
         <li> There are still about 420,000+ GitHub.com Wikis that are below 798 stars and/or publically editable. These
             can't be directly indexed by search engines as well. </li>
