--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -41,11 +41,11 @@
             The blocking greatly reduces the effectiveness of content of pages on affected Wikis if they cannot be
             searched on search engines such as Google or DuckDuckGo.
         </li>
-        <li> GitHub is currently permitting a select criteria of GitHub Wikis to be indexed by not including the
-            blocking header. They have not released their testing criteria. This appears to have started around Q4 2021
-            with the groundwork having being laid by transistioning from blanket site-wide robots.txt blocking to
-            selective HTTP Header-based unblocking. The observed criteria had been observed to be changing periodically
-            but may have stablized since. </li>
+        <li> GitHub is currently permitting a select criteria of GitHub Wikis to be directly indexed by not including
+            the header blocking indexing. They have not released their testing criteria. This appears to have started
+            around Q4 2021 with the groundwork having being laid by transistioning from blanket site-wide robots.txt
+            blocking to selective HTTP Header-based unblocking. The observed criteria had been observed to be changing
+            periodically but may have stablized since. </li>
         <li> The most recent observed criteria to permit indexing appears to be "Editing Restricted to Repository
             Collaborators" and repository has 798 stars and above. <a
                 href="https://docs.google.com/spreadsheets/d/1y5V1xVtL-Z4w4yt9mVQuwGCP3s8TgNAS756IKStRUqs/edit?usp=sharing">
