🔎  420,000+ GitHub Wikis, now indexable.

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>About GitHub Wiki SEE</title>
+    <title>About GitHub Wiki SEE - 🔎 420,000+ GitHub Wikis, now indexable.</title>
     <style>
         body {
             max-width: 38rem;
@@ -25,6 +25,9 @@
 
 <body id="main">
     <h1>GitHub Wiki SEE</h1>
+    <p>
+        🔎  <i>420,000+ GitHub Wikis, now indexable.</i>
+    </p>
     <p>
         <em>GitHub Wiki Search Engine Enablement</em> (GHWSEE) allows non-indexed GitHub Wikis to be indexed by search
         engines. The <a href="/robots.txt"><code>robots.txt</code></a> and <a
