--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>About GitHub Wiki SEE - 🔎 420,000+ GitHub Wikis, now indexable.</title>
+    <title>About GitHub Wiki SEE - 420,000+ Wikis, now indexable.</title>
     <style>
         body {
             max-width: 38rem;
