clearup that this is for "Editing Restricted to Repository Collaborators"

--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -105,11 +105,11 @@
                 href="https://github.com/libgdx/libgdx.github.io"> repository</a>. There is also a <a
                 href="https://github.com/libgdx/libgdx.github.io/pull/65">pull request</a> on that repository that can
             be used as a reference as well.</li>
-        <li>It is also possible to target the GitHub Wiki itself as well from the GitHub repository and deploy to it
-            with GitHub Actions. Wikis on repositories with high star counts (1000+) can take advantage of this as those
-            GitHub Wikis are likely to be whitelisted by GitHub for direct indexing (please test first). An example of
-            this can be seen on the <a href="https://github.com/golang/vscode-go/issues/2094">Go for VSCode
-                repository.</a> </li>
+        <li>It is also possible to target a "Editing Restricted to Repository Collaborators" GitHub Wiki itself as well
+            from the GitHub repository and deploy to it with GitHub Actions and have it be indexed if the repo has a
+            high star count (1000+). These Wikis are likely to be whitelisted by GitHub for direct indexing (please test
+            first). An example of this can be seen on the <a href="https://github.com/golang/vscode-go/issues/2094">Go
+                for VSCode repository.</a> </li>
         <li>If you or your organization does this, please reach out to me to try to expedite search engines to remove
             GHWSEE's entries from search engine results for the migrated wiki.</li>
     </ul>
