--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -25,7 +25,7 @@
 
 <body id="main">
     <h1>GitHub Wiki SEE</h1>
-    <p> 🔎 <i>420,000+ GitHub Wikis, now indexable.</i>
+    <p> 🔎 <i>420,000+ GitHub Wikis, now indexable by your favorite search engine.</i>
     </p>
     <p>
         <em>GitHub Wiki Search Engine Enablement</em> (GHWSEE) allows non-indexed GitHub Wikis to be indexed by search
