Last Modified Date note
Closes: https://github.com/nelsonjchen/github-wiki-see-rs/issues/195

--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -228,6 +228,7 @@
     <aside id="header_info">
         <p>📄 URL: <a href="{{ original_url }}" class="visit_url_link">{{ original_url }}</a>
         </p>
+        <!-- Last Modified Date added around here from redirect checker-->
     </aside>
     <article id="content">
         <h1>{{ original_title }}</h1>
