--- a/templates/mirror.html
+++ b/templates/mirror.html
@@ -221,9 +221,10 @@
 <body id="main">
     <nav id="header_button">
         <a href="{{ original_url }}" class="visit_url_button"> View Page on GitHub.com</a>
-        <p>⚠️ The indexable preview below may have <em>rendering errors</em>, <em>broken links</em>, <em>missing
-                images</em>, and may not include the <em>last updated date.</em> Please view the original page on
-            GitHub.com and not this indexable preview if you intend to <em>use</em> this content. </p>
+        <p>⚠️ The <a href="https://en.wiktionary.org/wiki/indexable">indexable</a> preview below may have <em>rendering
+                errors</em>, <em>broken links</em>, <em>missing images</em>, and may not include the <em>last updated
+                date.</em> Please view the original page on GitHub.com and not this indexable preview if you intend to
+            <em>use</em> this content. </p>
     </nav>
     <aside id="header_info">
         <p>📄 URL: <a href="{{ original_url }}" class="visit_url_link">{{ original_url }}</a>
